# numbacs

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .zenodo.json  CONTRIBUTING.md  README.md  RELEASES.md  environment-ci.yml  environment-dev.yml  pyproject.toml  requirements.txt  windows_debug_script.py  windows_integration_check.py
.github/workflows/: ci.yml  draft-pdf.yml  release.yml
docs/: environment-rtd.yml  environment.yml  requirements.txt
docs/source/: .userguide.rst.swp  conf.py  contributing.rst  index.rst  refs.bib  releases.rst  sg_execution_times.rst  theory.rst  userguide.rst
docs/source/_static/css/: custom.css
docs/source/auto_examples/: index.rst
docs/source/auto_examples/elliptic_lcs/: plot_bickley_elliptic_lcs.codeobj.json  plot_bickley_elliptic_lcs.ipynb  plot_bickley_elliptic_lcs.py  plot_bickley_elliptic_lcs.py.md5  plot_qge_elliptic_lcs.codeobj.json  plot_qge_elliptic_lcs.ipynb  plot_qge_elliptic_lcs.py  plot_qge_elliptic_lcs.py.md5  sg_execution_times.rst
docs/source/auto_examples/elliptic_oecs/: plot_bickley_elliptic_oecs.codeobj.json  plot_bickley_elliptic_oecs.ipynb  plot_bickley_elliptic_oecs.py  plot_bickley_elliptic_oecs.py.md5  plot_bickley_elliptic_oecs.rst  plot_qge_elliptic_oecs.codeobj.json  plot_qge_elliptic_oecs.ipynb  plot_qge_elliptic_oecs.py  plot_qge_elliptic_oecs.py.md5  plot_qge_elliptic_oecs.rst  sg_execution_times.rst
docs/source/auto_examples/ftle/: plot_bickley_ftle.codeobj.json  plot_bickley_ftle.ipynb  plot_bickley_ftle.py  plot_bickley_ftle.py.md5  plot_bickley_ftle.rst  plot_bickley_ftle_ridges.codeobj.json  plot_bickley_ftle_ridges.ipynb  plot_bickley_ftle_ridges.py  plot_bickley_ftle_ridges.py.md5  plot_bickley_ftle_ridges.rst  plot_copernicus_globe_ftle.codeobj.json  plot_copernicus_globe_ftle.ipynb  plot_copernicus_globe_ftle.py  plot_copernicus_globe_ftle.py.md5  plot_copernicus_globe_ftle.rst  plot_dg_ftle.codeobj.json  plot_dg_ftle.ipynb  plot_dg_ftle.py  plot_dg_ftle.py.md5  plot_dg_ftle.rst  plot_dg_ftle_ridges.codeobj.json  plot_dg_ftle_ridges.ipynb  plot_dg_ftle_ridges.py  plot_dg_ftle_ridges.py.md5  plot_dg_ftle_ridges.rst  plot_merra_ftle.codeobj.json  plot_merra_ftle.ipynb  plot_merra_ftle.py  plot_merra_ftle.py.md5  plot_merra_ftle.rst  plot_merra_ftle_ridges.codeobj.json  plot_merra_ftle_ridges.ipynb  plot_merra_ftle_ridges.py  plot_merra_ftle_ridges.py.md5  plot_merra_ftle_ridges.rst  plot_merra_globe_ftle.codeobj.json  plot_merra_globe_ftle.ipynb  plot_merra_globe_ftle.py.md5  plot_merra_globe_ftle.rst  plot_qge_ftle.codeobj.json  (+10 more)
docs/source/auto_examples/hyp_lcs/: plot_dg_hyp_lcs.codeobj.json  plot_dg_hyp_lcs.ipynb  plot_dg_hyp_lcs.py  plot_dg_hyp_lcs.py.md5  plot_dg_hyp_lcs.rst  plot_merra_hyp_lcs.codeobj.json  plot_merra_hyp_lcs.ipynb  plot_merra_hyp_lcs.py  plot_merra_hyp_lcs.py.md5  plot_merra_hyp_lcs.rst  sg_execution_times.rst
docs/source/auto_examples/hyp_oecs/: plot_bickley_ile.codeobj.json  plot_bickley_ile.ipynb  plot_bickley_ile.py  plot_bickley_ile.py.md5  plot_bickley_ile.rst  plot_dg_ile.codeobj.json  plot_dg_ile.ipynb  plot_dg_ile.py  plot_dg_ile.py.md5  plot_dg_ile.rst  plot_merra_hyp_oecs.codeobj.json  plot_merra_hyp_oecs.ipynb  plot_merra_hyp_oecs.py  plot_merra_hyp_oecs.py.md5  plot_merra_hyp_oecs.rst  plot_merra_ile.codeobj.json  plot_merra_ile.ipynb  plot_merra_ile.py  plot_merra_ile.py.md5  plot_merra_ile.rst  plot_qge_hyp_oecs.codeobj.json  plot_qge_hyp_oecs.ipynb  plot_qge_hyp_oecs.py  plot_qge_hyp_oecs.py.md5  plot_qge_hyp_oecs.rst  plot_qge_ile.codeobj.json  plot_qge_ile.ipynb  plot_qge_ile.py  plot_qge_ile.py.md5  plot_qge_ile.rst  sg_execution_times.rst
docs/source/auto_examples/time_series/: plot_dg_numbacs_vs_scipy.codeobj.json  plot_dg_numbacs_vs_scipy.ipynb  plot_dg_numbacs_vs_scipy.py  plot_dg_numbacs_vs_scipy.py.md5  plot_dg_numbacs_vs_scipy.rst  plot_dg_time_series.codeobj.json  plot_dg_time_series.ipynb  plot_dg_time_series.py  plot_dg_time_series.py.md5  plot_dg_time_series.rst  plot_qge_numbacs_vs_scipy_reduced.codeobj.json  plot_qge_numbacs_vs_scipy_reduced.ipynb  (+14 more)
examples/: GALLERY_HEADER.rst
examples/data/merra_june2020/: dates.npy  dates.pkl  lat.npy  lon.npy
examples/elliptic_lcs/: GALLERY_HEADER.rst  plot_bickley_elliptic_lcs.py  plot_qge_elliptic_lcs.py
examples/elliptic_oecs/: GALLERY_HEADER.rst  plot_bickley_elliptic_oecs.py  plot_qge_elliptic_oecs.py
examples/ftle/: GALLERY_HEADER.rst  plot_bickley_ftle.py  plot_bickley_ftle_ridges.py  plot_copernicus_globe_ftle.py  plot_dg_ftle.py  plot_dg_ftle_ridges.py  plot_merra_ftle.py  plot_merra_ftle_ridges.py  plot_merra_globe_ftle.py  plot_qge_ftle.py  plot_qge_ftle_ridges.py
examples/hyp_lcs/: GALLERY_HEADER.rst  plot_dg_hyp_lcs.py  plot_merra_hyp_lcs.py
examples/hyp_oecs/: GALLERY_HEADER.rst  plot_bickley_ile.py  plot_dg_ile.py  plot_merra_hyp_oecs.py  plot_merra_ile.py  plot_qge_hyp_oecs.py  plot_qge_ile.py
examples/time_series/: GALLERY_HEADER.rst  plot_dg_numbacs_vs_scipy.py  plot_dg_time_series.py  plot_qge_numbacs_vs_scipy_reduced.py  plot_qge_ridge_time_series.py  plot_qge_time_series.py
numbacs/: __init__.py  diagnostics.py  extraction.py  flows.py  integration.py  utils.py
numbacs/extraction/: __init__.py  elliptic.py  hyperbolic.py  ridges.py
paper/: paper.bib  paper.md
src/numbacs/: __init__.py  diagnostics.py  flows.py  integration.py  utils.py
src/numbacs/extraction/: __init__.py  elliptic.py  hyperbolic.py  ridges.py
tests/: conftest.py  test_diagnostics.py  test_extraction.py  test_flows.py  test_integration.py  test_utils.py  windows_integration_check.py
tests/testing_data/: C.npy  Cevals.npy  Cevals_aux.npy  Cevecs.npy  Cevecs_aux.npy  Cvals.npy  Cvals_aux.npy  Cvecs.npy  Cvecs_aux.npy  S.npy  Sevals.npy  Sevals_d.npy  Sevecs.npy  Sevecs_d.npy  Svals.npy  Svals_d.npy  Svecs.npy  Svecs_d.npy  elliplcs.pkl  ellipoecs.pkl  fm.npy  fm_aux.npy  fm_ci.npy  fm_cs.npy  fm_n.npy  fms_ci.npy  fms_cs.npy  ftle.npy  hyplcs.pkl  hypoecs.pkl  ile.npy  ivd.npy  lavd.npy  ordered_ridges.pkl  ridge_pts.npy  ridges.pkl  u.npy  v.npy  vort.npy
